Don't use fixed add comment, push it down after the comments to solve caret not visible issue.

--- a/scss/partials/_comments.scss
+++ b/scss/partials/_comments.scss
@@ -395,9 +395,9 @@ div.comments {
       width: 316px;
 
       @include mobile() {
-        padding: 0px;
-        width: calc(100% - 64px);
-        position: fixed;
+        padding: 16px 0px 0px;
+        width: 100%;
+        position: absolute;
         bottom: 0px;
       }
 
